[project]
name = "comfyui-graphtoprompt"
description = "workflow.json -> workflow_api.json"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/nat-chan/ComfyUI-graphToPrompt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-graphToPrompt"
Icon = ""
